section13/sample-fsgroup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-fsgroup
spec:
  securityContext:
    fsGroup: 1001
  containers:
  - name: nginx-container
    image: nginx:1.16
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    volumeMounts:
      - mountPath: /cache
        name: cache-volume
  volumes:
    - name: cache-volume
      emptyDir: {}
