section13/sample-kubectl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-kubectl
spec:
  serviceAccountName: sample-serviceaccount
  containers:
  - name: kubectl-container
    image: lachlanevenson/k8s-kubectl:v1.18.2
    command: ["sleep", "86400"]
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
