section13/sample-nonroot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-nonroot
spec:
  securityContext:
    runAsNonRoot: true
  containers:
  - name: nginx-container
    image: nginx:1.16
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
