section13/sample-runuser.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-runuser
spec:
  containers:
  - name: tools-container
    image: amsy810/tools:v2.0
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  securityContext:
    runAsUser: 65534
    runAsGroup: 65534
    supplementalGroups:
      - 1001
      - 1002
