section13/sample-serviceaccount-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-serviceaccount-pod
  namespace: default
spec:
  serviceAccountName: sample-serviceaccount
  containers:
  - name: nginx-container
    image: nginx:1.16
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
