section13/sample-ipblock-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-ipblock-ingress-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: np4
  policyTypes:
    - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 10.244.19.72/32
      ports:
      - protocol: TCP
        port: 80
